<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.ApplicationAdmin.ApplicationAdminPannel">

    <TextView
        android:onClick="logout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@drawable/buttons"
        style="bold | italic"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"


        />
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/applogo"
        />

    <Button
        android:onClick="addNewRestaurant"
        android:id="@+id/add_new_rest_btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_above="@+id/add_delivery_boy_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:text="@string/add_new_restaurant"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        />


    <Button

        android:onClick="addNewDeliveryBoy"
        android:id="@+id/add_delivery_boy_btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttons"
        android:text="@string/add_new_delivery_boy"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        />



</RelativeLayout>