<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/nav_login_activity"
    tools:openDrawer="start"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:title="Who You Are...??"
            app:titleTextColor="#fff"
            android:background="@color/colorPrimaryDark"
            />

        <ImageView
            android:id="@+id/login_applogo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:src="@drawable/applogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="195dp"
            />

        <EditText
            android:id="@+id/login_phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_applogo"
            android:background="@drawable/input_design"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="19sp"
            />


        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_phone_number_input"
            android:background="@drawable/input_design"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="6dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="19sp"
            android:autofillHints="" />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/login_password_input"
            android:layout_marginTop="5dp"
            >

            <com.rey.material.widget.CheckBox
                android:id="@+id/remember_me_chkb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Material.Drawable.CheckBox"
                android:text="@string/remember_me"
                android:textColor="@color/colorPrimaryDark"
                app:cbd_strokeColor="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:layout_marginStart="17dp"
                />


        </LinearLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttons"
            android:padding="17dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            />
        


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navmenu"
        app:menu="@menu/login_menu"
        app:headerLayout="@layout/nav_login_header"
        android:layout_gravity = "start"
        />

</androidx.drawerlayout.widget.DrawerLayout>